:+1: outにexportするように追加

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "run-s build:posts build:next",
     "build:posts": "ts-node --project tsconfig.builder.json ./src/builder/posts.ts",
-    "build:next": "next build",
+    "build:next": "next build && next export",
     "start": "next start"
   },
   "dependencies": {
